--- a/maquetacion/styles.css
+++ b/maquetacion/styles.css
@@ -26,7 +26,44 @@ button {
 div#navbar-left img {
     width: 8em;
 }
+h1 {
+    padding: 1.2em 10.6em;
+    text-align: center;
+    font-size: 1.8em;
+}
+div#introducción-acciones{
+    padding: 0em 28em;
+ ;;
+    
+}
 
+button#contactenos{
+    width: 11em;
+    margin-right: 2em;
+    margin-left: 2em;
+}
+
+button#sumate{
+    width: 11em;
+    border-color:#6b53f0;
+    color: #6b53f0;
+    
+}
+ h1#TextImpac{
+    color: white; 
+    font-size: 3em;
+    padding:1em 3em;
+    text-align: left;
+    margin-top: 1em;
+    margin-bottom: -2.2em;
+ }
+div#foto{
+    background-image: url(Captura\ desde\ 2023-05-01\ 23-41-30.png);
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-attachment: fixed;
+
+}
 @media (width >= 2500px) {
     html {
         font-size: 28px;
@@ -38,3 +75,9 @@ div#navbar-left img {
         font-size: 32px;
     }
 }
+@media (width <= 1050px) {
+    html {
+        font-size: 10px;
+    }
+}
+
